--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ProjectManager</title>
   <link rel="stylesheet" href="app.css">
-  <script type="module" src="dist/app.js"></script>
+  <script type="module" src="dist/bundle.14be5f5bc3eb23a05312.js"></script>
 </head>
 <body>
 <template id="project-input">
